--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,15 @@ html,
 body{
     height: 100%;
     font-size: 1rem;
+    font-family: 'Montserrat', sans-serif;
 }
 
-gradient{
+.gradient{
     background: rgb(0,139,106);
     background: linear-gradient(90deg, rgba(0,139,106,1) 0%, rgba(242,255,173,1) 100%);
+}
+.page-header{
+    margin-top:4rem;
+    font-size:1.25rem;
+    color:#fff;
 }
