--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body{
     height: 100%;
     font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
+    color: #bfffdc;
 }
 
 .gradient{
@@ -12,5 +13,9 @@ body{
 .page-header{
     margin-top:4rem;
     font-size:1.25rem;
+    color: #fff;
+}
+.feature{
     color:#fff;
+
 }
