--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,14 @@ body{
     color:#fff;
 
 }
+.icon gradient{
+    color:#fff;
+    height: 5rem;
+    width: 5rem;
+    font-size:1.75rem;
+    border-radius: 100%;
+}
+.icon{
+    color:#fff
+    
+}
