--- a/css/style.css
+++ b/css/style.css
@@ -19,14 +19,28 @@ body{
     color:#fff;
 
 }
-.icon gradient{
+.icon {
     color:#fff;
     height: 5rem;
     width: 5rem;
-    font-size:1.75rem;
-    border-radius: 100%;
+    font-size: 1.75rem;
+    border-radius:100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
-.icon{
-    color:#fff
-    
+.gallery {
+    background-color: whitesmoke;
+}
+.gallery img {
+    border-radius: 5%;
+}
+.services {
+    color:white
+}
+footer {
+    color: #fff;
+    font-size: 1rem;
+    margin: 0;
+    padding: 100%;
 }
