--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body{
     height: 100%;
     font-size: 1rem;
     font-family: 'Montserrat', sans-serif;
-    color: #bfffdc;
+    color: #fff;
 }
 
 .gradient{
